# machine-learning-semisupervisionado

./: README.md  min_max_scaler.pkl  modelo_label_propagation.pkl  projeto.ipynb  pyproject.toml
